# robotic-arm-hand-tracking

./: LICENSE  README.md  mouse_control.py  requirements.txt  requirements_windows.txt  run_robot.bat  simple_demo.py  test_pybullet.py
catkin_ws/src/robotic_arm_controller/: CMakeLists.txt  package.xml
catkin_ws/src/robotic_arm_controller/arduino/: arduino_controller.ino
catkin_ws/src/robotic_arm_controller/config/: controllers.yaml  hand_tracking_config.yaml  robot_config.yaml
catkin_ws/src/robotic_arm_controller/launch/: hand_control.launch  hardware.launch  simulation.launch
catkin_ws/src/robotic_arm_controller/msg/: GestureCommand.msg  HandPose.msg
catkin_ws/src/robotic_arm_controller/scripts/: coordinate_mapper_node.py  gesture_recognizer.py  hand_tracker_node.py  hardware_bridge_node.py  ik_solver_node.py  kinematics.py  robot_controller_node.py  test_kinematics.py  transform_utils.py
catkin_ws/src/robotic_arm_controller/urdf/: robot_arm.urdf
pybullet_sim/: hand_tracker.py  main.py  robot_controller.py
