<?xml version="1.0"?>
<package format="2">
  <name>robotic_arm_controller</name>
  <version>1.0.0</version>
  <description>
    Virtual Robotic Arm Controller using MediaPipe hand tracking and ROS.
    Controls a 6-DOF robot arm in simulation (Gazebo) and on hardware (Arduino/Raspberry Pi).
  </description>

  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Core ROS Dependencies -->
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>

  <!-- Transforms -->
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Simulation -->
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros_control</depend>

  <!-- Control -->
  <depend>controller_manager</depend>
  <depend>joint_state_controller</depend>
  <depend>position_controllers</depend>
  <depend>effort_controllers</depend>

  <!-- Motion Planning (Optional - for advanced features) -->
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>

  <!-- Hardware Interface -->
  <depend>rosserial_python</depend>
  <depend>rosserial_arduino</depend>

  <!-- Visualization -->
  <depend>rviz</depend>
  <depend>visualization_msgs</depend>

  <!-- URDF -->
  <depend>urdf</depend>
  <depend>xacro</depend>

  <!-- Message Generation -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
